[gd_scene load_steps=9 format=3 uid="uid://bbppmt810msmj"]

[ext_resource type="Texture2D" uid="uid://bhyc4mixl6805" path="res://art/ui/grass_panel.png" id="1_2h4m8"]
[ext_resource type="Script" uid="uid://bun8eltvsia6k" path="res://scenes/setting_screen.gd" id="1_bf80k"]
[ext_resource type="FontFile" uid="uid://42iydnvi6hbk" path="res://pixelFJ8pt1-Modified.otf" id="2_2h4m8"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vnuvi"]
texture = ExtResource("1_2h4m8")

[sub_resource type="Animation" id="Animation_t8bi4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 135)]
}

[sub_resource type="Animation" id="Animation_2h4m8"]
resource_name = "enter"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 135), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_vnuvi"]
resource_name = "exit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(2.07053, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 135)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6qgc"]
_data = {
&"RESET": SubResource("Animation_t8bi4"),
&"enter": SubResource("Animation_2h4m8"),
&"exit": SubResource("Animation_vnuvi")
}

[node name="SettingScreen" type="Panel"]
offset_top = 135.0
offset_right = 240.0
offset_bottom = 270.0
theme_override_styles/panel = SubResource("StyleBoxTexture_vnuvi")
script = ExtResource("1_bf80k")

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 112.0
offset_right = 137.0
offset_bottom = 129.0
theme_override_fonts/font = ExtResource("2_2h4m8")
theme_override_font_sizes/font_size = 8
text = "Done"

[node name="RightSide" type="Control" parent="."]
anchors_preset = 0
offset_left = 120.0
offset_right = 240.0
offset_bottom = 135.0
mouse_filter = 2

[node name="Master" type="Control" parent="RightSide"]
layout_mode = 2
anchors_preset = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 155.0
offset_bottom = 20.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="RightSide/Master"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("2_2h4m8")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Audio 100%"

[node name="HSlider" type="HSlider" parent="RightSide/Master"]
layout_mode = 0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 26.0
value = 100.0
rounded = true

[node name="Music" type="Control" parent="RightSide"]
layout_mode = 2
anchors_preset = 0
offset_left = 35.0
offset_top = 52.0
offset_right = 155.0
offset_bottom = 52.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="RightSide/Music"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("2_2h4m8")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Music 100%"

[node name="HSlider" type="HSlider" parent="RightSide/Music"]
layout_mode = 0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 26.0
value = 100.0
rounded = true

[node name="Effects" type="Control" parent="RightSide"]
layout_mode = 2
anchors_preset = 0
offset_left = 35.0
offset_top = 84.0
offset_right = 155.0
offset_bottom = 84.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="RightSide/Effects"]
layout_mode = 0
offset_left = -12.0
offset_right = 68.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("2_2h4m8")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Effects 100%"

[node name="HSlider" type="HSlider" parent="RightSide/Effects"]
layout_mode = 0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 26.0
value = 100.0
rounded = true

[node name="LeftSide" type="Control" parent="."]
anchors_preset = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 126.0
offset_bottom = 136.0
mouse_filter = 2

[node name="Background" type="Control" parent="LeftSide"]
layout_mode = 2
anchors_preset = 0
offset_left = 16.0
offset_top = 52.0
offset_right = 136.0
offset_bottom = 52.0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="LeftSide/Background"]
layout_mode = 0
offset_left = -28.0
offset_right = 100.0
offset_bottom = 16.0
theme_override_fonts/normal_font = ExtResource("2_2h4m8")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Background 100%"

[node name="HSlider" type="HSlider" parent="LeftSide/Background"]
layout_mode = 0
offset_top = 10.0
offset_right = 64.0
offset_bottom = 26.0
value = 100.0
rounded = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_e6qgc")
}
autoplay = "RESET"

[connection signal="pressed" from="ReturnButton" to="." method="_done_button_pressed"]
[connection signal="value_changed" from="RightSide/Master/HSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="RightSide/Music/HSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="RightSide/Effects/HSlider" to="." method="_on_effects_slider_value_changed"]
[connection signal="value_changed" from="LeftSide/Background/HSlider" to="." method="_on_background_slider_value_changed"]
